# Parallel-Reduction-Finance

./: CMakeLists.txt  README.md  reduction_omp.cpp  reduction_sequential.cpp  requirements.txt  util.cpp
backend/: server.py
benchmarks/: run_benchmarks.sh
frontend/: index.html  vite.config.ts
frontend/pages/: App.tsx  index.css
include/: reduction.hpp
src/: main.cpp  reduction_cuda.cu  reduction_omp.cpp  reduction_simd.cpp
